// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoData render 1`] = `
<div>
  <div
    class="flex min-h-24 items-center justify-center p-6 text-center text-sm text-muted-foreground"
    role="status"
  >
    没有数据
  </div>
</div>
`;

exports[`NoData render with text 1`] = `
<div>
  <div
    class="flex min-h-24 items-center justify-center p-6 text-center text-sm text-muted-foreground"
    role="status"
  >
    无数据
  </div>
</div>
`;
